--- a/DevKit/Dialogs/TcpClientMessageDialog.xaml
+++ b/DevKit/Dialogs/TcpClientMessageDialog.xaml
@@ -48,7 +48,8 @@
         <ListBox
             x:Name="MessageListBox"
             Grid.Row="0"
-            BorderThickness="0"
+            Margin="10,10,10,0"
+            BorderThickness="1"
             ItemsSource="{Binding MessageCollection}"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled">
@@ -114,7 +115,7 @@
             </b:Interaction.Behaviors>
         </ListBox>
 
-        <Grid Grid.Row="1" Margin="10,0,10,10">
+        <Grid Grid.Row="1" Margin="10,10,10,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
@@ -166,9 +167,17 @@
                 </b:Interaction.Triggers>
             </ComboBox>
 
-            <CheckBox
+            <Button
                 Grid.Column="1"
                 Margin="10,0"
+                Command="{Binding ExtensionCommand}"
+                Content="&#xe6aa;"
+                FontFamily="/DevKit;component/Fonts/#iconfont"
+                Foreground="{DynamicResource PrimaryBrush}"
+                ToolTip="添加扩展指令" />
+
+            <CheckBox
+                Grid.Column="2"
                 Content="HEX显示"
                 IsChecked="{Binding ShowHex}">
                 <b:Interaction.Triggers>
@@ -181,15 +190,9 @@
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
             </CheckBox>
-
-            <Button
-                Grid.Column="2"
-                BorderThickness="0"
-                Command="{Binding ClearMessageCommand}"
-                Content="清屏" />
         </Grid>
 
-        <Grid Grid.Row="2" Margin="10,0,10,10">
+        <Grid Grid.Row="2" Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
@@ -205,6 +208,7 @@
 
             <Grid Grid.Column="1" Margin="10,0,0,0">
                 <Grid.RowDefinitions>
+                    <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
@@ -226,7 +230,13 @@
 
                 <Button
                     Grid.Row="1"
-                    Margin="0,7,0,0"
+                    Margin="0,7"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding ClearMessageCommand}"
+                    Content="清屏" />
+
+                <Button
+                    Grid.Row="2"
                     Background="{DynamicResource BackgroundBrush}"
                     BorderThickness="0"
                     Command="{Binding SendMessageCommand}"
