--- a/DevKit/Views/UdpCommunicateView.xaml
+++ b/DevKit/Views/UdpCommunicateView.xaml
@@ -26,6 +26,9 @@
 
         <cvt:MessageTagBgConverter x:Key="MessageTagBgConverterKey" />
         <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
+        <cvt:ListenStateConverter x:Key="ListenStateConverterKey" />
+        <cvt:MessageTagConverter x:Key="MessageTagConverterKey" />
+        <cvt:MessageCountConverter x:Key="MessageCountConverterKey" />
         <cvt:DeleteExCmdBtnVisibleConverter x:Key="DeleteExCmdBtnVisibleConverterKey" />
     </UserControl.Resources>
 
@@ -339,6 +342,7 @@
                 <hc:ComboBox
                     Grid.Column="1"
                     Margin="10,0"
+                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     ItemsSource="{Binding LocalAddressCollection}"
                     SelectedIndex="0" />
 
@@ -367,10 +371,12 @@
                     Margin="10,0"
                     hc:InfoElement.Placeholder="端口"
                     hc:InfoElement.ShowClearButton="True"
+                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     Text="{Binding ListenPort}"
                     TextWrapping="NoWrap" />
 
                 <Button
+                    x:Name="ListenStateButton"
                     Grid.Column="2"
                     Command="{Binding ServerListenCommand}"
                     Content="{Binding ListenState}"
@@ -380,7 +386,7 @@
             <ListBox
                 x:Name="ClientListBox"
                 Grid.Row="2"
-                ItemsSource="{Binding TcpClientCollection}"
+                ItemsSource="{Binding ClientCollection}"
                 ScrollViewer.CanContentScroll="False"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 
@@ -389,6 +395,61 @@
                         <b:InvokeCommandAction Command="{Binding ItemDoubleClickCommand}" CommandParameter="{Binding SelectedItem, ElementName=ClientListBox}" />
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
+
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0" FontSize="14">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0 }:{1}">
+                                        <Binding Path="Ip" />
+                                        <Binding Path="Port" />
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+
+                            <Border
+                                Grid.Column="1"
+                                Width="16"
+                                Height="16"
+                                Background="Red"
+                                CornerRadius="8"
+                                Visibility="{Binding MessageCount, Converter={StaticResource MessageTagConverterKey}}">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="10"
+                                    Foreground="White"
+                                    Text="{Binding MessageCount, Converter={StaticResource MessageCountConverterKey}}" />
+                            </Border>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Border x:Name="ItemContainerBorder" Padding="10">
+                                        <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                    </Border>
+
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
 
                 <!--  自动滑动到最底部  -->
                 <b:Interaction.Behaviors>
